--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -49,7 +49,7 @@
   webpage: https://mbajaj.wixsite.com/profile/
   number_educ: 2
   education1: Video understanding
-  education2: Temporal Spatial localization of phrases in images/videos
+  education2: Temporal and spatial localization of text in images/videos
 
 - name: "This could be you !"
   photo: rock.jpg
