--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -19,7 +19,7 @@
 - name: Gursimran Singh
   photo: simar.jpg
   info: Master Student
-  email: msiamr@cs.ubc.ca 
+  email: msimar@cs.ubc.ca 
   webpage: http://gursimar.github.io/
   number_educ: 2
   education1: Video understanding
